[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.5"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
fnv = "1.0.7"
itertools = "0.14.0"
ndarray = "0.16.1"
winnow = "0.7.10"
